Fixed layouting issues (header jump).

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -2,4 +2,6 @@
 {% include css/agency.css %}
 {% include css/rouge.css %}
 {% include css/c3.min.css %}
+{% include css/customdoxygen.css %}
+
 
